# XDL_DenseCaps

./: .gitignore  README.md  densecaps.ipynb  pyproject.toml  stage1_test.ipynb
configs/: config.yaml  kvasir_v2_capsnet.yaml  stage2_paired_densecaps.yaml
src/xdl_densecaps/: __init__.py  config.py  evaluation.py  filter_lesion_regions.py  test.py  test_grading.py  train.py  train_stage2.py  training.py  val.py
src/xdl_densecaps/datasets/: __init__.py  binary_image_dataset.py  paired_image_dataset.py
src/xdl_densecaps/lesion/: __init__.py  components.py  extraction.py  heatmap.py  thresholding.py
src/xdl_densecaps/models/: __init__.py  backbone.py  densenet_capsnet.py  densenet_classifier.py  lesion_proposal.py  paired_densecaps.py
src/xdl_densecaps/utils/: __init__.py  checkpoints.py  logging.py
tests/: test_binary_image_dataset.py  test_densenet_capsnet.py  test_duplicate_aware_splits.py  test_filter_lesion_regions.py  test_grading.py  test_paired_densecaps.py  test_paired_image_dataset.py
