[project]
name = "xdl-densecaps"
version = "0.1.0"
description = "Incremental PyTorch implementation of the DenseNetCaps baseline for GI endoscopy classification."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "pillow>=11.2.1",
    "pypdf>=6.10.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
    "tqdm>=4.67.1",
]

[project.scripts]
xdl-train = "xdl_densecaps.train:main"
xdl-train-stage2 = "xdl_densecaps.train_stage2:main"
xdl-val = "xdl_densecaps.val:main"
xdl-test = "xdl_densecaps.test:main"
xdl-filter-lesions = "xdl_densecaps.filter_lesion_regions:main"

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
